deployment-custom-egress.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
  labels:
    istio: egress-api-gateway
  name: egress-api-gateway-svc
  namespace: tutorial
spec:
  ports:
    - name: http2
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8443
    - name: tls
      protocol: TCP
      port: 15443
      targetPort: 15443
  selector:
    app: egress-api-gateway
    istio: egress-api-gateway
  type: ClusterIP
  sessionAffinity: None
status:
  loadBalancer: {}
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: egress-api-gateway
  namespace: tutorial
  labels:
    app: egress-api-gateway
    istio: egress-api-gateway
#    app.kubernetes.io/name: gateways
#    chart: gateways
spec:
  replicas: 1
  selector:
    matchLabels:
      app: egress-api-gateway
      istio: egress-api-gateway
  template:
    metadata:
      labels:
        app: egress-api-gateway
#        chart: gateways
        istio: egress-api-gateway
      annotations:
        sidecar.istio.io/inject: 'false'
    spec:
      restartPolicy: Always
      serviceAccountName: egress-api-gateway-service-account
      schedulerName: default-scheduler
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: beta.kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
                      - ppc64le
                      - s390x
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 2
              preference:
                matchExpressions:
                  - key: beta.kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
            - weight: 2
              preference:
                matchExpressions:
                  - key: beta.kubernetes.io/arch
                    operator: In
                    values:
                      - ppc64le
            - weight: 2
              preference:
                matchExpressions:
                  - key: beta.kubernetes.io/arch
                    operator: In
                    values:
                      - s390x
      terminationGracePeriodSeconds: 30
      securityContext: {}
      containers:
        - resources:
            requests:
              cpu: 50m
          readinessProbe:
            httpGet:
              path: /healthz/ready
              port: 15020
              scheme: HTTP
            initialDelaySeconds: 1
            timeoutSeconds: 1
            periodSeconds: 2
            successThreshold: 1
            failureThreshold: 30
          terminationMessagePath: /dev/termination-log
          name: egressgateway
          ports:
            - name: http2
              containerPort: 8080
              protocol: TCP
            - name: https
              containerPort: 8443
              protocol: TCP
            - name: tls
              containerPort: 15443
              protocol: TCP
            - name: http-envoy-prom
              containerPort: 15090
              protocol: TCP
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: istio-certs
              readOnly: true
              mountPath: /etc/certs
            - name: egressgateway-certs
              readOnly: true
              mountPath: /etc/istio/egressgateway-certs
            - name: egressgateway-ca-certs
              readOnly: true
              mountPath: /etc/istio/egressgateway-ca-certs
          terminationMessagePolicy: File
          image: >-
            registry.redhat.io/openshift-service-mesh/proxyv2-rhel8:1.0.10
          args:
            - proxy
            - router
            - '--domain'
            - $(POD_NAMESPACE).svc.cluster.local
            - '--log_output_level=default:info'
            - '--drainDuration'
            - 45s
            - '--parentShutdownDuration'
            - 1m0s
            - '--connectTimeout'
            - 10s
            - '--serviceCluster'
            - egress-api-gateway
            - '--zipkinAddress'
            - 'zipkin:9411'
            - '--proxyAdminPort'
            - '15000'
            - '--statusPort'
            - '15020'
            - '--controlPlaneAuthPolicy'
            - NONE
            - '--discoveryAddress'
            - 'istio-pilot.istio-system:15010'
      serviceAccount: egress-api-gateway-service-account
      volumes:
        - name: istio-certs
          secret:
            secretName: istio.egress-api-gateway-service-account
            defaultMode: 420
            optional: true
        - name: egressgateway-certs
          secret:
            secretName: istio-egressgateway-certs
            defaultMode: 420
            optional: true
        - name: egressgateway-ca-certs
          secret:
            secretName: istio-egressgateway-ca-certs
            defaultMode: 420
            optional: true
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 100%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
