deployment-custom-ingress.yaml
apiVersion: v1
kind: Service
namespace: tutorial
metadata:
  name: custom-ingressgateway-svc
  namespace: tutorial
  annotations:
  labels:
    istio: custom-ingressgateway
spec:
  type: ClusterIP
  selector:
    app: custom-ingressgateway
    istio: custom-ingressgateway
  ports:
    - name: status-port
      protocol: TCP
      port: 15020
      targetPort: 15020
    - name: http2
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8443
    - name: tls
      protocol: TCP
      port: 15443
      targetPort: 15443
---
apiVersion: apps/v1
kind: Deployment
namespace: tutorial
metadata:
  name: custom-ingressgateway
  labels:
    app: custom-ingressgateway
    istio: custom-ingressgateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: custom-ingressgateway
      istio: custom-ingressgateway
  template:
    metadata:
      labels:
        app: custom-ingressgateway
        istio: custom-ingressgateway
      annotations:
        sidecar.istio.io/inject: "false"
        scheduler.alpha.kubernetes.io/critical-pod: ""
    spec:
      restartPolicy: Always
      serviceAccountName: custom-ingressgateway-service-account
      serviceAccount: custom-ingressgateway-service-account
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      securityContext: {}
      containers:
        - name: ingressgateway
          image: "registry.redhat.io/openshift-service-mesh/proxyv2-rhel8@sha256:96d9f45b773c9367880a6bfea263d99a691006514732ef8f8e40f79c98603c1a"
          imagePullPolicy: IfNotPresent
          ports:
            - name: status-port
              containerPort: 15020
              protocol: TCP
            - name: http2
              containerPort: 8080
              protocol: TCP
            - name: https
              containerPort: 8443
              protocol: TCP
            - name: tls
              containerPort: 15443
              protocol: TCP
            - name: http-envoy-prom
              containerPort: 15090
              protocol: TCP
          args:
          - proxy
          - router
          - '--domain'
          - $(POD_NAMESPACE).svc.cluster.local
          - -v
          - "2"
          - '--discoveryRefreshDelay'
          - '1s' #discoveryRefreshDelay
          - '--drainDuration'
          - '45s' #drainDuration
          - '--parentShutdownDuration'
          - '1m0s' #parentShutdownDuration
          - '--connectTimeout'
          - '10s' #connectTimeout
          - '--serviceCluster'
          - custom-ingressgateway
          - '--zipkinAddress'
          - zipkin.istio-system:9411
          - '--proxyAdminPort'
          - "15000"
          - '--statusPort'
          - '15020'
          - '--controlPlaneAuthPolicy'
          - NONE
          - '--discoveryAddress'
          - istio-pilot.istio-system:15010
          resources:
            requests:
              cpu: 10m
          readinessProbe:
            httpGet:
              path: /healthz/ready
              port: 15020
              scheme: HTTP
            initialDelaySeconds: 1
            timeoutSeconds: 1
            periodSeconds: 2
            successThreshold: 1
            failureThreshold: 30
          terminationMessagePolicy: File
          terminationMessagePath: /dev/termination-log
          volumeMounts:
          - mountPath: /etc/certs
            name: istio-certs
            readOnly: true
          - mountPath: /etc/istio/ingressgateway-certs
            name: ingressgateway-certs
            readOnly: true
          - mountPath: /etc/istio/ingressgateway-ca-certs
            name: ingressgateway-ca-certs
            readOnly: true
      volumes:
      - name: istio-certs
        secret:
          defaultMode: 420
          optional: true
          secretName: istio.custom-ingressgateway-service-account
      - name: ingressgateway-certs
        secret:
          defaultMode: 420
          optional: true
          secretName: istio-ingressgateway-certs
      - name: ingressgateway-ca-certs
        secret:
          defaultMode: 420
          optional: true
          secretName: istio-ingressgateway-ca-certs
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - amd64
                - ppc64le
                - s390x
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 2
            preference:
              matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - amd64
          - weight: 2
            preference:
              matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - ppc64le
          - weight: 2
            preference:
              matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - s390x
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - custom-ingressgateway
            topologyKey: kubernetes.io/hostname
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
