egress-cfg-1.yaml
#oc apply -f - <<EOF
#apiVersion: networking.istio.io/v1alpha3
#kind: ServiceEntry
#metadata:
#  name: spring-boot-rest-external
#spec:
#  hosts:
#    - mac.local.host
#  exportTo:
#    - "."
#  ports:
#    - number: 8080
#      name: http
#      protocol: HTTP
#  location: MESH_EXTERNAL
#  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: spring-boot-rest-external
spec:
  hosts:
    - local.host
  exportTo:
    - "."
  ports:
    - number: 8080
      name: http
      protocol: HTTP
  location: MESH_EXTERNAL
  resolution: DNS
  endpoints:
    - address: mac.local.host
      ports:
        http: 8080
    - address: lenovo.local.host
      ports:
        http: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: ext-service
  annotations:
  labels:
    app: spring-boot-rest
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: egress-api-gateway-external-svc
  annotations:
  labels:
    istio: egress-api-gateway
spec:
  ports:
    - name: http-ext
      protocol: TCP
      port: 8083
      targetPort: 8083
  selector:
    app: egress-api-gateway
    istio: egress-api-gateway
    ns: tutorial2
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: spring-boot-rest-external
spec:
  selector:
    istio: egress-api-gateway # use Istio default gateway implementation
    ns: tutorial2
  servers:
    - port:
        number: 8083
        name: http-ext-gw
        protocol: HTTPS
      hosts:
        - "ext-service.tutorial2.svc.cluster.local"
      tls:
        mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rest-external-to-egress
spec:
  hosts:
    - ext-service.tutorial2.svc.cluster.local
  exportTo:
    - "."
  gateways:
    - spring-boot-rest-external
    - mesh
  http:
    - match:
        - gateways:
            - mesh
          port: 80
      route:
        - destination:
            host: egress-api-gateway-external-svc.tutorial2.svc.cluster.local
            subset: rest
            port:
              number: 8083
          weight: 100
    - match:
        - gateways:
            - spring-boot-rest-external
          port: 8083
      route:
        - destination:
            host: local.host
            subset: ext-svc-circuitbreaker
            port:
              number: 8080
          weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-rest
spec:
  host: egress-api-gateway-external-svc.tutorial2.svc.cluster.local
  subsets:
    - name: rest
      trafficPolicy:
        portLevelSettings:
          - port:
              number: 8083
            tls:
              mode: ISTIO_MUTUAL
              sni: ext-service.tutorial2.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ext-local-host-circuitbreaker
spec:
  host: local.host
  subsets:
    - name: ext-svc-circuitbreaker
      trafficPolicy:
        outlierDetection:
          consecutiveErrors: 2
          interval: 30s
          baseEjectionTime: 15s
