egress-cfg.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: spring-boot-rest-external
spec:
  selector:
    istio: egressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "mac.local.host"
      tls:
        mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: spring-boot-rest-external
spec:
  hosts:
    - mac.local.host
#  exportTo:
#    - "."
  ports:
    - number: 8080
      name: http
      protocol: HTTP
  location: MESH_EXTERNAL
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rest-external-to-egress
spec:
  hosts:
    - mac.local.host
  gateways:
    - spring-boot-rest-external
    - mesh
  http:
    - match:
        - gateways:
            - mesh
          port: 80
      route:
        - destination:
            host: istio-egressgateway.istio-system.svc.cluster.local
            subset: rest
            port:
              number: 443
          weight: 100
    - match:
        - gateways:
            - spring-boot-rest-external
          port: 443
      route:
        - destination:
            host: mac.local.host
            port:
              number: 8080
          weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-rest
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
    - name: rest
      trafficPolicy:
        portLevelSettings:
          - port:
              number: 443
            tls:
              mode: ISTIO_MUTUAL
              sni: mac.local.host
---
#apiVersion: v1
#kind: Service
#metadata:
#  name: spring-boot-rest-external
#spec:
#  clusterIP: None
#  ports:
#    - protocol: TCP
#      port: 8080
---
#apiVersion: v1
#kind: Endpoints
#metadata:
#  name: spring-boot-rest-external
#subsets:
#  - addresses:
#      - ip: 192.168.1.103
#    ports:
#      - port: 8080
---
#apiVersion: networking.istio.io/v1alpha3
#kind: ServiceEntry
#metadata:
#  name: spring-boot-rest-external
#spec:
#  hosts:
#    - spring-boot-rest-external.tutorial.svc.cluster.local
##  exportTo:
##    - "."
#  ports:
#    - number: 8080
#      name: http
#      protocol: HTTP
#  location: MESH_EXTERNAL
#  resolution: DNS
