deny_authorizationPolicies.yaml
#--- curl -v http://spring-boot-rest-client-svc:8080/ping
#--- curl -v http://spring-boot-rest-client-svc.tutorial:8080/ping
#--- curl -v http://spring-boot-rest-client-svc.tutorial.svc.cluster.local:8080/ping
#
#--- curl -v http://spring-boot-rest-server-svc:8080/ping
#--- curl -v http://spring-boot-rest-server-svc.tutorial2:8080/ping
#--- curl -v http://spring-boot-rest-server-svc.tutorial2.svc.cluster.local:8080/ping
#
#--- curl -v http://spring-boot-rest-client-tutorial.apps-crc.testing/ping
#
#--- curl -v -HHost:spring-boot-rest-client-tutorial.apps-crc.testing http://ingress-api-gateway-svc.tutorial/ping
#--- curl -v -HHost:spring-boot-rest-client-tutorial.apps-crc.testing http://egress-api-gateway-svc.tutorial2/ping
#--- curl -v -HHost:spring-boot-rest-client-tutorial.apps-crc.testing http://spring-boot-rest-client-svc.tutorial.svc.cluster.local:8080/ping
#
#--- curl -v http://mac.local.host/ping
#--- curl -v http://mac.local.host:8080/ping

---
#Запрещаем все взаимодействия внутри SM

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: istio-system
spec:
  {}

---
#Разрешаем любое взаимодействие внутри Namespace

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-namespace-inner-communications
  namespace: tutorial
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["tutorial", "istio-system"]

---
#Разрешаем любое взаимодействие внутри Namespace

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-namespace-inner-communications
  namespace: tutorial2
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["tutorial2", "istio-system"]

---
#Разрешаем взаимодействие из tutorial в tutorial2

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-communications-from-tutorial-to-tutorial2
  namespace: tutorial2
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["tutorial"]

---

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-access-to-ingress
  namespace: istio-system
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: ingress-api-gateway
  rules:
    ### TODO-выяснить применимо ли к TCP
    - {}

---

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-access-to-egress
  namespace: istio-system
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: egress-api-gateway
  rules:
    ### TODO-выяснить применимо ли к TCP
    - {}
